style.css
/* GENERAL */

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
}

html {
  scroll-behavior: smooth;
  background-color: #f2f2f2; /* Light gray background */
}

p {
  color: #555; /* Darker gray text color */
}

/* TRANSITION */

a,
.btn {
  transition: all 300ms ease;
}

/* DESKTOP NAV */

nav,
.nav-links {
  display: flex;
}

nav {
  justify-content:space-evenly;
  align-items: center;
  height: 10.5vh;
}

.top-nav {
  /* background-image: linear-gradient(to top, #f2f2f2, #000000 15%); */
  background-color: black;
  /* background-image: linear-gradient(to top, #f2f2f2 55%, #00000078); */
  overflow: hidden;
  margin-bottom: 1.25rem;
}

.nav-links {
  gap: 1rem;
  list-style: none;
  font-size: 1rem;
}

a {
  color: #000000; /* Dark gray text color */
  text-decoration: none;
}

a:hover {
  color: #7e7e7e; /* Slightly darker gray on hover */
  text-decoration: underline;
}

.top {
  color: white;
}

.logo {
  font-size: 1.25rem;
  color: #f2f2f2;
  /* text-decoration: underline; */
  font-style: normal;
  position: relative;
}

.logo:hover {
  cursor: default;
}

/* HAMBURGER MENU */

#hamburger-nav {
  display: none;
}

.hamburger-menu {
  position: relative;
  display: inline-block;
}

.hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 30px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 100%;
  height: 2px;
  background-color: #333; /* Dark gray line */
  transition: all 0.3 ease-in-out;
}

.menu-links {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: #fff; /* White background */
  width: fit-content;
  max-height: 0;
  overflow: hidden;
  transition: all 0.3 ease-in-out;
}

.menu-links a {
  display: block;
  padding: 10px;
  text-align: center;
  font-size: 1.5rem;
  color: #333; /* Dark gray text color */
  text-decoration: none;
  transition: all 0.3 ease-in-out;
}

.menu-links li {
  list-style: none;
}

.menu-links.open {
  max-height: 300px;
}

.hamburger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
}

.hamburger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
  transform: none;
}

.hamburger-icon span:first-child {
  opacity: 1;
}

.hamburger-icon span:first-child {
  transform: none;
}

/* SECTIONS */

section {
  padding-top: 4vh;
  height: 96vh;
  margin: 0 10rem;
  box-sizing: border-box;
  min-height: fit-content;
}

.section-container {
  display:flex;
}

/* PROFILE SECTION */

#profile {
  display: flex;
  position: static;
  gap: 2rem;
  height: 10vh;
  background: white;
  border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
  box-shadow: 20px 20px rgb(0, 0, 0);
  transition: all .4s ease;
  justify-content: center;
}

#profile:hover {
  border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
  box-shadow: 10px 10px rgba(0,0,0,.25);
}

.section__pic-container {
  display: flex;
  height: 400px;
  width: 400px;
  margin: auto 0;
}

.section__text {
  align-self: center;
  text-align: center;
}

.section__text p {
  font-weight: 600;
}

.section__text__p1 {
  text-align: center;
}

.section__text__p2 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
  color: rgb(86, 86, 86);
}

.title {
  font-size: 3rem;
  text-align: center;
}

#socials-container {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  gap: 1rem;
}

/* ICONS */

.icon {
  cursor: pointer;
  height: 2rem;
}

/* BUTTONS */

.btn-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-weight: 600;
  transition: all 300ms ease;
  padding: 1rem;
  width: 8rem;
  border-radius: 2rem;
}

.btn-color-1,
.btn-color-2 {
  border: #353535 0.1rem solid; /* Dark gray border */
}

.btn-color-1:hover,
.btn-color-2:hover {
  cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover {
  background: #353535; /* Dark gray background */
  color: #fff; /* White text color */
}

.btn-color-1:hover {
  background: #000; /* Black background on hover */
}

.btn-color-2 {
  background: none;
}

.btn-color-2:hover {
  border: #fff 0.1rem solid; /* White border on hover */
}

.btn-container {
  gap: 1rem;
}

/* ABOUT SECTION */

#about {
  position: relative;
}

.about-containers {
  gap: 2rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.about-details-container {
  justify-content: center;
  flex-direction: column;
}

.about-containers,
.about-details-container {
  display: flex;
}

.about-pic {
  border-radius: 2rem;
}

.arrow {
  position: absolute;
  right: -5rem;
  bottom: 2.5rem;
}

.skill {
  float: right;
  position: absolute;
  right: 5rem;
  /* bottom: 2.5rem; */
}

.details-container {
  padding: 1.5rem;
  flex: 1;
  background: #fff; /* White background */
  border-radius: 2rem;
  border: #353535 0.1rem solid; /* Dark gray border */
  border-color: #a3a3a3; /* Light gray border */
  text-align: center;
}

.details-container-experience {
  padding: 1.5rem;
  flex: 1;
  background: #fff; /* White background */
  border-radius: 2rem;
  border: #353535 0.1rem solid; /* Dark gray border */
  border-color: #a3a3a3; /* Light gray border */
  text-align: left;
}

.section-container {
  gap: 4rem;
  height: 80%;
}

.section__pic-container {
  height: 400px;
  width: 400px;
  margin: auto 0;
}

.profile-pic {
  border-radius: 50%;
    box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 1);
}

/* EXPERIENCE SECTION */

#experience {
  position: relative;
}

.experience-sub-title {
  color: #555; /* Darker gray text color */
  font-weight: 600;
  font-size: 1.75rem;
  margin-bottom: 2rem;
}

.experience-sub-title-2 {
  color: #555; /* Darker gray text color */
  font-weight: 600;
  font-size: 1rem;
  margin-bottom: 2rem;
}

.experience-details-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.article-container {
  display: flex;
  text-align: initial;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 2.5rem;
  justify-content: space-around;
}

article {
  display: flex;
  width: 10rem;
  justify-content: left;
  /* justify-content:left; */
  gap: 0.5rem;
}

article .icon {
  cursor: default;
}

li {
  margin-left: 1rem;
  margin-bottom: 0.5rem;
}

/* PROJECTS SECTION */

#projects {
  position: relative;
}

.color-container {
  border-color: #a3a3a3; /* Light gray border */
  background: #fafafa; /* Light gray background */
}

.project-img {
  border-radius: 2rem;
  width: 90%;
  height: 90%;
}

.project-title {
  margin: 1rem;
  color: #333; /* Dark gray text color */
}

.project-btn {
  color: #333; /* Dark gray text color */
  border-color: #a3a3a3; /* Light gray border */
}

/* CONTACT */

#contact {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 70vh;
}

.contact-info-upper-container {
  display: flex;
  justify-content: center;
  border-radius: 2rem;
  border: #353535 0.1rem solid; /* Dark gray border */
  border-color: #a3a3a3; /* Light gray border */
  background: #fafafa; /* Light gray background */
  margin: 2rem auto;
  padding: 0.5rem;
}

.contact-info-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 1rem;
}

.contact-info-container p {
  font-size: larger;
}

.contact-icon {
  cursor: default;
}

.email-icon {
  height: 2.5rem;
}

/* FOOTER SECTION */

footer {
  height: 26vh;
  margin: 0 1rem;
}

footer p {
  text-align: center;
}

